<resources>
    <string name="app_name">Campsite Locator</string>
    <string name="about_us">About Us:</string>
    <string name="button">Button</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="start_your_search">Start Your Search For Campsites!</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="save_info">Save my information</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="please_login">Please Login:</string>
    <string name="welcome">Welcome!</string>
    <string name="search_campsite">Search for a Campsite</string>
    <string name="my_favorites">My Favorites</string>
    <string name="add_update_campsite">Add/Update Campsite</string>
    <string name="add_campsite">Add</string>
    <string name="update_campsite">Update</string>
    <string name="delete_campsite">Delete</string>
    <string name="add_campsite_title">Add or Update Campsite:</string>
    <string name="search_title">Search:</string>
    <string name="my_favorites_title">My Favorites:</string>
    <string name="or">- OR -</string>
    <string name="campsites_near_me">Search for Campsites Near Me</string>
    <string name="search_by">Search By:</string>
    <string name="site_name">Name</string>
    <string name="city_state">City, State</string>
    <string name="feature">Feature</string>
    <string name="search">Search</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="view_details">View Details</string>
    <string name="results_on_map">Show Results on Map</string>
    <string name="_1">1.</string>
    <string name="search_results">Search Results:</string>
    <string name="textview">TextView</string>
    <string name="phone">Phone</string>
    <string name="Details">Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="photo">Photo</string>
    <string name="facebook_app_id">539113463426561</string>
    <string name="fb_login_protocol_scheme">fb539113463426561</string>
    <string name="create_one">Create One</string>
    <string name="No_account">No account yet?</string>
    <string name="create_account">Create An Account:</string>
    <string name="create">create</string>
    <string name="Register">register</string>
    <string name="confirm">Confirm password</string>
    <string name="back_to_login">Back To Login</string>
</resources>
